name:                streaming-image
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/bch29/streaming-image#readme
license:             BSD3
license-file:        LICENSE
author:              Bradley Hardy
maintainer:          bradleyhardy@live.com
copyright:           (C) Bradley Hardy 2015
category:            Other
build-type:          Simple
cabal-version:       >=1.10

executable streaming-image-demo
  hs-source-dirs:      demo
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , streaming
                     , streaming-bytestring
                     , resourcet
                     , exceptions
                     , streaming-image

library
  hs-source-dirs:      src

  exposed-modules:     Codec.Picture.Png.Streaming
                     , Codec.Picture.Png.Streaming.CRC
                     , Codec.Picture.Png.Streaming.Util
                     , Data.Functor.PullsOver

  other-modules:       Codec.Picture.Png.Streaming.Core
                     , Codec.Picture.Png.Streaming.ChunkReaders

  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , cereal >= 0.5
                     , mmorph >= 1.0
                     , mtl >= 2.2
                     , exceptions >= 0.8.2
                     , resourcet >= 1.1
                     , streaming >= 0.1.4
                     , streaming-bytestring >= 0.1.4
                     , transformers >= 0.4.2
                     , vector >= 0.11
